...
    private let achLeftStack = UIStackView()
    private let achRightStack = UIStackView()
    private let achievementsWrapper = UIStackView()
    
    let inviteButton: UIButton = {
        let btn = UIButton(type: .system)
        btn.setTitle("Пригласить", for: .normal)
        btn.backgroundColor = UIColor(red: 150/255, green: 0, blue: 71/255, alpha: 1) // #960047
        btn.setTitleColor(.white, for: .normal)
        btn.titleLabel?.font = .systemFont(ofSize: 18, weight: .semibold)
        btn.layer.cornerRadius = 16
        btn.clipsToBounds = true
        return btn
...
